--- a/src/components/ItemDetailContainer/ItemDetail.css
+++ b/src/components/ItemDetailContainer/ItemDetail.css
@@ -1,2 +1,6 @@
-.img-product{
+.item-detail{
+    border: 1px solid rgba(0, 0, 0, 0.2);
+    border-radius: 10px;
+    color:#384047;
+    background-color: white;
 }
