--- a/src/components/ItemListContainer/Card.css
+++ b/src/components/ItemListContainer/Card.css
@@ -2,7 +2,7 @@
     border: 1px solid rgba(0, 0, 0, 0.2);
     border-radius: 10px;
     color:#384047;
-    width: 300px;
+    min-height: 410px;
 }
 
 .img-product{
