--- a/src/components/ItemListContainer/Card.css
+++ b/src/components/ItemListContainer/Card.css
@@ -1,8 +1,5 @@
-.item{
-    border: 1px solid rgba(0, 0, 0, 0.2);
-    border-radius: 10px;
-    color:#384047;
-    min-height: 410px;
+.card-width{
+    max-width: 298px;
 }
 
 .img-product{
